--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>How to set up React, Webpack and Babel</title>
+
+    <style>
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            font-family: sans-serif;
+        }
+
+        li {
+            clear: both;
+            margin-top: 20px;
+        }
+
+        img {
+            width: 80px;
+            float: left;
+            margin-right: 10px;
+        }
+
+        strong {
+            font-size: 20px;
+        }
+
+        p {
+            margin: 5px 0;
+        }
+    </style>
 </head>
 <body>
     <div id="container"></div>
+    <form action="" id="repo-form">
+        <input type="text" name="repository">
+        <button type="submit">Adicionar</button>
+    </form>
+
+    <ul id="repo-list">
+        <li>
+            <img src="https://avatars0.githubusercontent.com/u/28929274?v=4" alt="">
+            <strong>Rocketseat.com.br</strong>
+            <p>Descrição</p>
+            <a target="_blank" href="http://github.com/rocketseat/rocketseat.com.br">Acessar</a>
+        </li>
+        <li>
+            <img src="https://avatars0.githubusercontent.com/u/28929274?v=4" alt="">
+            <strong>Rocketseat.com.br</strong>
+            <p>Descrição</p>
+            <a target="_blank" href="http://github.com/rocketseat/rocketseat.com.br">Acessar</a>
+        </li>
+    </ul>
 </body>
 </html>
